# nuxchain-app

./: .env  .env.contracts.example  .env.example  .env.lighthouse  .env.vercel  .gitignore  .vercelignore  .wallet-analysis-hybrid-cache.json  ABIS_SYNC_COMPLETE.txt  ABIS_UPDATE_SUMMARY.md  API_OVERLOAD_NOTIFICATION_README.md  Anchor.toml  BATCH_MINTING_IMPLEMENTATION.md  CHANGELOG_CONTRACTS_UPDATE.md  CHAT_SYSTEMS_EVALUATION.md  CONFIGURE_TREASURY_INTEGRATION.js  DEBUG_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DIAGNOSTIC.md  ENV_SETUP.md  GITHUB_ISSUES_ROADMAP.md  HOTFIX_DEPOSIT_MANAGEMENT.md  LEEME_ABIS_ACTUALIZADOS.md  NuxbeeWorflow.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  ORGANIZATION.md  PERFORMANCE_OPTIMIZATIONS.md  PINATA_SETUP.md  QUICK_START_ABIS.md  REACT_QUERY_IMPLEMENTATION_SUMMARY.md  README.md  RPC_SYNC_FIX.md  SESSION_COMPLETE_SUMMARY.md  TESTS_STATUS.txt  URL_CONTEXT_MEJORAS.md  airdrop-analysis-hybrid-2026-02-02.csv  airdrop-analysis-hybrid-2026-02-03.csv  api_test_output.txt  (+32 more)
.lighthouseci/: lhr-1761181146731.html  lhr-1761181146731.json  lhr-1761181176966.html  lhr-1761181176966.json  lhr-1761181205940.html  lhr-1761181205940.json  lhr-1761577002966.html  lhr-1761577002966.json  lhr-1761577032505.html  lhr-1761577032505.json  lhr-1761577060267.html  lhr-1761577060267.json  links.json
api/: PRODUCTION-FORMAT-CHECKLIST.md  README.md  _index.ts  chat.js  context-config.js  debug-stream.js  embeddings.js  gemini-v2.js  (+14 more)
api-dist/: _index.js  index.js
programs/nux-p2p-escrow/: Cargo.toml  DEPLOY.md
programs/nux-p2p-escrow/src/: lib.rs
(+1368 files in other folders)
