[package]
name = "nux-p2p-escrow"
version = "0.1.0"
description = "NuxChain P2P OTC Escrow — Secure peer-to-peer NUX token marketplace on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nux_p2p_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated-token"] }
